--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Elariaehab.github.io/project",
+  "homepage": "./",
   "name": "sessionreact",
   "version": "0.1.0",
   "private": true,
